[package]
name = "rust-actuator"
description = "Health check and production-ready features for Rust"
version = "0.1.0"
license = "MIT"
readme = "README.md"
edition = "2024"
keywords = [
    "rest-api",
    "actuator",
    "heath-check",
]
repository = "https://github.com/sinhashubham95/rust-actuator"
categories = ["web-programming"]
authors = ["Shubham Sinha <sinhashubham95@gmail.com>"]
rust-version.workspace = true
include = [
    "README.md",
    "src/**/*.rs",
    "LICENSE",
    "Cargo.toml",
]

[dependencies]
sysinfo = { version = "0.33" }
backtrace = {version = "0.3"}
